Web demo, dependencies, linter

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -3,12 +3,12 @@ description: Segment display example
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.6.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-
+  intl: ^0.16.0
   segment_display:
     path: ../
 
