--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,5 @@ before_script:
   - git clone https://github.com/flutter/flutter.git -b $FLUTTER_VERSION
   - ./flutter/bin/flutter doctor
 script:
-  - ./flutter/bin/flutter test --update-goldens
+#  - ./flutter/bin/flutter test --update-goldens
   - ./flutter/bin/flutter test
