--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -37,7 +37,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "cz.janstol.flutter_segment_display.example"
+        applicationId "dev.stol.flutter_segment_display_example"
         minSdkVersion 16
         targetSdkVersion 29
         versionCode flutterVersionCode.toInteger()
