--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "flutter_segment_display_example",
     "short_name": "flutter_segment_display_example",
     "start_url": ".",
-    "display": "minimal-ui",
+    "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
     "description": "A new Flutter project.",
