--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: segment_display
 description: Segment display widget for Flutter. Supports multiple types of segment displays and segment customization.
-version: 0.4.1+1
+version: 0.5.0-nullsafety.0
 homepage: https://github.com/janstol/flutter_segment_display
 
 environment:
-  sdk: ">=2.6.0 <3.0.0"
+  sdk: ">=2.12.0-0 <3.0.0"
 
 dependencies:
   flutter:
@@ -13,4 +13,4 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  lint: ^1.3.0
+  lint: ^1.5.1
