--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -4,17 +4,17 @@ version: 1.0.0+1
 publish_to: none
 
 environment:
-  sdk: ">=2.12.0-0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  intl: ^0.17.0-nullsafety.2
+  intl: ^0.17.0
   segment_display:
     path: ../
 
 dev_dependencies:
-  lint: ^1.5.1
+  lint: ^1.5.2
 
 flutter:
   uses-material-design: true
