--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "flutter_segment_display_example",
-    "short_name": "flutter_segment_display_example",
+    "name": "Flutter Segment Display Example",
+    "short_name": "Flutter Segment Display Example",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "description": "Flutter Segment Display packaged - example.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
